# file-compressor

./: .clang-format  .clangd  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
src/: CMakeLists.txt  bit_reader.h  bit_writer.cpp  bit_writer.h  compressor.h  file_bit_reader.h  file_bit_writer.cpp  file_bit_writer.h  huffman_compressor.cpp  huffman_compressor.h  huffman_compressor.hpp  main.cpp  memory_bit_reader.h  memory_bit_writer.cpp  memory_bit_writer.h
tests/: CMakeLists.txt  test_huffman.cpp  test_main.cpp
